# srcML

./: .gitignore  BUILD.md  CHANGES.md  CMakeLists.txt  CMakePresets.json  DOCKER.md  compose.yml  docker-bake.hcl  docker-bake.override.hcl  toolchain-msvc.cmake  vcpkg-configuration.json  vcpkg.json
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/actions/setup-windows-dependencies/: action.yml
.github/actions/test-client/: action.yml
.github/actions/test-libsrcml/: action.yml
.github/actions/test-parser/: action.yml
.github/actions/vcpkg/: action.yml
.github/actions/version/: action.yml
.github/actions/windows-dependencies/: action.yml
.github/workflows/: Build.yml  BuildMacOS.yml  BuildWasm.yml  BuildWindows.yml  CacheWindowsDependencies.yml  ClangBuildAnalysis.yml  Docker.yml  Test.yml  TestClient.yml  TestClient2.yml  TestFedora.yml  TestLibsrcml.yml  TestParser.yml  WindowsDependencies.yml  codeql.yml
doc/manpage/: CMakeLists.txt  srcml.cfg
docker/fedora/: Dockerfile
docker/opensuse/: Dockerfile
docker/ubuntu/: Dockerfile
examples/libsrcml/: CMakeLists.root.txt.in  CMakeLists.txt
package/: CMakeLists.txt  debian-cpack.cmake  inno-cpack.cmake  macos-cpack.cmake  nuget-cpack.cmake  patch_path_env_v4.xml  srcMLUI_InstallDir.wxs  srcml_extra_dialog.wxs  srcml_extra_dialog_v4.wxs  wix-cpack.cmake
presets/: CMakeBasePresets.json  CMakeMSVCPresets.json  CMakeMacOSPresets.json  CMakeRPMPresets.json  CMakeUbuntuPresets.json
src/: CMakeLists.txt
src/client/: CMakeLists.txt  create_src.cpp  create_srcml.cpp  decompress_srcml.cpp  input_curl.cpp  src_input_file.cpp  src_input_filelist.cpp  src_input_filesystem.cpp  src_input_libarchive.cpp  src_input_text.cpp  srcml.cpp  srcml_cli.cpp  srcml_cli.hpp  srcml_input_srcml.cpp  srcml_options.hpp  srcml_pipe.cpp  stdin_libarchive.cpp
src/libsrcml/: CMakeLists.txt  language_extension_registry.cpp  language_extension_registry.hpp  libsrcml.cpp  libsrcql.cpp  qli_extensions.cpp  qli_extensions.hpp  srcSAXController.cpp  srcml.h  srcml_archive.cpp  srcml_sax2_reader.cpp  srcml_transform.cpp  srcml_translator.cpp  srcml_types.hpp  srcml_unit.cpp  unification_table.cpp  unification_table.hpp  unit_utilities.cpp  xpathTransformation.cpp  xpath_generator.cpp  xpath_generator.hpp  xpath_node.cpp  xpath_node.hpp
src/parser/: CommentTextLexer.g  DocstringPython.cpp  DocstringPython.hpp  KeywordLexer.g  Language.cpp  Language.hpp  Mode.cpp  Mode.hpp  NameDifferentiatorPython.cpp  NameDifferentiatorPython.hpp  NewlineTerminate.cpp  NewlineTerminate.hpp  NewlineTerminatePython.cpp  NewlineTerminatePython.hpp  OffSideRule.cpp  OffSideRule.hpp  OperatorLexer.g  Position.hpp  StreamMLParser.hpp  TextLexer.g  UTF8CharBuffer.hpp  srcMLOutput.cpp  srcMLOutputElements.hpp  srcMLParser.g  srcMLState.hpp  srcml_bitset_token_sets.hpp
test/client/testsuite/: CMakeLists.txt  archive.sh  cli_test_example.sh  cpp_file.sh  cpp_java.sh  cpp_markup_if0_archive_multi.sh  cpp_markup_if0_archive_single.sh  cpp_markup_if0_file.sh  cpp_markup_if0_single.sh  cpp_nomarkup_else_archive_multi.sh  cpp_nomarkup_else_archive_single.sh  cpp_nomarkup_else_file.sh  cwd.sh  default_src_encoding.sh  dependency_zip.sh  directory_input.sh  empty_stdin.sh  expression.sh  file_ext_language.sh  files_from.sh  files_from_archived.sh  files_from_invalid.sh  files_from_list_uri_archived.sh  files_from_list_uri_compressed.sh  files_from_srcml.sh  files_from_srcml_list_uri_archived.sh  files_from_srcml_list_uri_compressed.sh  files_from_srcml_uri.sh  files_from_uri.sh  framework_test.sh  header_archive.sh  implicit_output.sh  implicit_relaxng_archive.sh  implicit_relaxng_unit.sh  implicit_xslt_identity_archive_multi.sh  implicit_xslt_identity_archive_single.sh  implicit_xslt_identity_unit.sh  info_archive_multi.sh  info_unit.sh  input_bz2.sh  (+143 more)
test/libsrcml/testsuite/: CMakeLists.txt  test_srcml_apply_transforms.cpp  test_srcml_convenience.cpp  test_srcml_global.cpp  test_srcml_unit_get.cpp  test_srcql.cpp
test/parser/: CMakeLists.txt
test/parser/testsuite/: CMakeLists.txt  alias_py.py.xml  alignas_c.c.xml  alignas_cpp.cpp.xml  alignof_c.c.xml  annotation_py.py.xml  argument_py.py.xml  array_py.py.xml  arrow_case.java.xml  assert_py.py.xml  attribute_py.py.xml  attributes_cpp.cpp.xml  block_py.py.xml  break_py.py.xml  call_py.py.xml  case_py.py.xml  catch_py.py.xml  class_js.js.xml  class_py.py.xml  comment_py.py.xml  comparisons_js.js.xml  comprehension_py.py.xml  condition_py.py.xml  context_sensitive_keyword_js.js.xml  continue_py.py.xml  delete_py.py.xml  dictionary_py.py.xml  else_py.py.xml  enum_java.java.xml  export_js.js.xml  finally_py.py.xml  for_py.py.xml  formatting_py.py.xml  function_c.c.xml  function_py.py.xml  functions_js.js.xml  global_py.py.xml  goto_js.js.xml  if_py.py.xml  import_py.py.xml  (+43 more)
test/parser/xsl/: eolterminate.xsl
